fix(layout): fixing line spacing for fig captions per PR review
adding some line spacing that was removed in the shift to the NPM library for the toolkit as noted
in the PR review

--- a/assets/css/_sass/website/_layout.scss
+++ b/assets/css/_sass/website/_layout.scss
@@ -136,7 +136,7 @@ figcaption {
   margin: 0;
   line-height: $base-line-height;
   font-weight: $light-weight;
-  margin: 0 0 8px 0;
+  margin: 0 0 16px 0;
 }
 
 p {
